--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -14,6 +14,11 @@ section {
 #desc {
     transition: transform 0.5s;
     text-align: center;
+    width: 70%;
+}
+
+#app {
+    padding: auto;
 }
 
 #app img {
