--- a/src/styles.css
+++ b/src/styles.css
@@ -161,3 +161,15 @@ ul li:hover {
   font-size: 15px;
 }
 }
+
+  @media (max-width: 400px){
+  #logo {
+    max-width: 120px;
+    left: 10px;
+  }
+
+  #pages a {
+    font-size: 14px;
+    margin: 0px 5px;
+  }
+  }
